--- a/mall-search/src/main/resources/application-prod.yml
+++ b/mall-search/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:mysql://db:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: reader
+    username: root
     password: 123456
     druid:
       initial-size: 5 #连接池初始化大小
